--- a/django-unicorn/requirements.txt
+++ b/django-unicorn/requirements.txt
@@ -12,7 +12,9 @@ cookiecutter==2.6.0
 decorator==5.1.1
 Django==4.2.11
 django-browser-reload==1.12.1
+django-taggit==5.0.1
 django-tailwind==3.6.0
+django-tinymce==4.1.0
 django-unicorn==0.60.0
 idna==3.6
 Jinja2==3.1.3
@@ -23,6 +25,7 @@ orjson==3.10.0
 pygments==2.17.2
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
