--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ django-unicorn==0.61.0
 fontawesomefree==5.14.0
 hiredis==3.1.0
 orjson==3.10.15
+pandas==2.2.3
 pillow==11.1.0
 pytz==2024.2
 redis==5.2.1
+selenium==4.1.3
 shortuuid==1.0.13
 soupsieve==2.6
 sqlparse==0.5.3
