--- a/requirements.live.txt
+++ b/requirements.live.txt
@@ -5,7 +5,11 @@ Django==5.1.5
 django-tailwind==3.8.0
 django-unicorn==0.61.0
 fontawesomefree==5.14.0
+gunicorn==23.0.0
 orjson==3.10.15
+psycopg==3.2.4
+psycopg-binary==3.2.4
+psycopg-pool==3.2.4
 pytz==2024.2
 selenium==4.1.3
 shortuuid==1.0.13
@@ -13,3 +17,4 @@ soupsieve==2.6
 sqlparse==0.5.3
 tailwind==3.1.5b0
 typing_extensions==4.12.2
+whitenoise==6.8.2
