--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -14,14 +14,19 @@ django-tailwind==3.8.0
 django-tinymce==4.1.0
 django-unicorn==0.61.0
 fontawesomefree==5.14.0
+gunicorn==23.0.0
 h11==0.14.0
 hiredis==3.1.0
 idna==3.10
 numpy==2.2.2
 orjson==3.10.15
 outcome==1.3.0.post0
+packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+psycopg==3.2.4
+psycopg-binary==3.2.4
+psycopg-pool==3.2.4
 pycparser==2.22
 pyOpenSSL==25.0.0
 PySocks==1.7.1
