--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -6,6 +6,7 @@ certifi==2025.1.31
 cffi==1.17.1
 cryptography==44.0.0
 decorator==5.1.1
+dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-redis==5.4.0
