--- a/requirements.live.txt
+++ b/requirements.live.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 cachetools==5.5.0
 decorator==5.1.1
+dj-database-url==2.3.0
 Django==5.1.5
 django-tailwind==3.8.0
 django-unicorn==0.61.0
