--- a/requirements.local.txt
+++ b/requirements.local.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 cachetools==5.5.0
 decorator==5.1.1
+dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-redis==5.4.0
@@ -10,15 +11,19 @@ django-tailwind==3.8.0
 django-tinymce==4.1.0
 django-unicorn==0.61.0
 fontawesomefree==5.14.0
-hiredis==3.1.0
+gunicorn==23.0.0
+Markdown==3.7
 orjson==3.10.15
 pandas==2.2.3
 pillow==11.1.0
+psycopg==3.2.4
+psycopg-binary==3.2.4
+psycopg-pool==3.2.4
 pytz==2024.2
-redis==5.2.1
 selenium==4.1.3
 shortuuid==1.0.13
 soupsieve==2.6
 sqlparse==0.5.3
 tailwind==3.1.5b0
 typing_extensions==4.12.2
+whitenoise==6.9.0
