--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 asgiref==3.8.1
-attrs==25.1.0
 beautifulsoup4==4.12.3
 cachetools==5.5.0
-certifi==2025.1.31
-cffi==1.17.1
-cryptography==44.0.0
 decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.5
@@ -16,37 +12,18 @@ django-tinymce==4.1.0
 django-unicorn==0.61.0
 fontawesomefree==5.14.0
 gunicorn==23.0.0
-h11==0.14.0
-hiredis==3.1.0
-idna==3.10
-numpy==2.2.2
+Markdown==3.7
 orjson==3.10.15
-outcome==1.3.0.post0
-packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 psycopg==3.2.4
 psycopg-binary==3.2.4
 psycopg-pool==3.2.4
-pycparser==2.22
-pyOpenSSL==25.0.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
 pytz==2024.2
-redis==5.2.1
 selenium==4.1.3
 shortuuid==1.0.13
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
 soupsieve==2.6
 sqlparse==0.5.3
 tailwind==3.1.5b0
-trio==0.28.0
-trio-websocket==0.11.1
 typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==1.26.20
-urllib3-secure-extra==0.1.0
 whitenoise==6.9.0
-wsproto==1.2.0
