--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 *.pot
 *.pyc
 __pycache__
-db.sqlite3
+# exception for branch <62610716-journal-ai-guidance-sqlite-X>
+# --------------------------------------
+# db.sqlite3
 media
 
 # Backup files # 
