Layout OK  | Layout updated: OK | Auth implemented... | UIP with django-unicorn implemented... | Commiting to merge w main, and upload... | v1 completed, UI/UIP 100% functional, uploading... | Uploaded, merged with main → New (temp) branch using sqlite instead of postgres, for Pyany... Deploying... | Commented <db.sqlite3> in .gitignore to allow for branch <62610716-journal-ai-guidance-sqlite-X> | Comitting before branching for db logging implementation... | Db logging implementation: OK → Deploying: Heroku &| Pyany...

--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -9,6 +9,7 @@ decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
+django-db-logger==0.1.13
 django-redis==5.4.0
 django-taggit==6.1.0
 django-tailwind==3.8.0
