--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
-django-redis==5.4.0
+django-db-logger==0.1.13
 django-taggit==6.1.0
 django-tailwind==3.8.0
 django-tinymce==4.1.0
