--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 *.pyc
 __pycache__
 # exception for branch <62610716-journal-ai-guidance-sqlite-X>
-# --------------------------------------
 # db.sqlite3
+# --------------------------------------
+db.sqlite3
 media
 
 # Backup files # 
