Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... / | /ONLINE - truthfinder tests OK - not completing: connection... / | Added default_image...

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@
 *.pot
 *.pyc
 __pycache__
-# exception for branch <62610716-journal-ai-guidance-sqlite-X>
+# exception for branch <62610716-journal-ai-guidance-sqlite-X>:
+# allow sqlite db
+# ---------------
 # db.sqlite3
-# --------------------------------------
-db.sqlite3
+# ---------------
 media
 
 # Backup files # 
