--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -5,16 +5,19 @@ cachetools==5.5.0
 certifi==2025.1.31
 cffi==1.17.1
 cryptography==44.0.0
+Cython==3.0.12
 decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-db-logger==0.1.13
+django-debug-toolbar==5.0.1
 django-redis==5.4.0
 django-taggit==6.1.0
 django-tailwind==3.8.0
 django-tinymce==4.1.0
 django-unicorn==0.61.0
+djcompiler==0.0.5
 fontawesomefree==5.14.0
 gunicorn==23.0.0
 h11==0.14.0
@@ -30,13 +33,17 @@ pillow==11.1.0
 psycopg==3.2.4
 psycopg-binary==3.2.4
 psycopg-pool==3.2.4
+pyarmor==9.0.8
+pyarmor.cli.core==7.6.4
 pycparser==2.22
 pyOpenSSL==25.0.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python_minifier==2.11.3
 pytz==2024.2
 redis==5.2.1
 selenium==4.1.3
+setuptools==75.8.0
 shortuuid==1.0.13
 six==1.17.0
 sniffio==1.3.1
