--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.12.3
 cachetools==5.5.0
 certifi==2025.1.31
 cffi==1.17.1
+cookiecutter==2.6.0
 cryptography==44.0.0
 Cython==3.0.12
 decorator==5.1.1
