--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 cachetools==5.5.0
+cookiecutter==2.6.0
 decorator==5.1.1
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-db-logger==0.1.13
+django-debug-toolbar==5.0.1
 django-taggit==6.1.0
 django-tailwind==3.8.0
 django-tinymce==4.1.0
